Added Images to page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button>Sign up</button>
             </div>
             <div>
-                <img src="/api/placeholder/400/200" alt="this is a placeholder for an image">
+                <img src="images/Abstract_Biz-DeepAI-1.jpg" alt="this is a placeholder for an image">
             </div>
         </section>
 
@@ -38,19 +38,19 @@
             <h2>Some random information.</h2>
             <div>
                 <div>
-                    <img src="/api/placeholder/150/150" alt="illustration">
+                    <img src="images/Steampunk_Biz-DeepAI-1.jpg" alt="illustration">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div>
-                    <img src="/api/placeholder/150/150" alt="illustration">
+                    <img src="images/Steampunk_Biz-DeepAI-2.jpg" alt="illustration">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div>
-                    <img src="/api/placeholder/150/150" alt="illustration">
+                    <img src="images/Steampunk_Biz-DeepAI-3.jpg" alt="illustration">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div>
-                    <img src="/api/placeholder/150/150" alt="illustration">
+                    <img src="images/Drawing_Biz-DeepAI-1.jpg" alt="illustration">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
