--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </main>
 
     <footer>
-        <p>Copyright © The Odin Project 2021</p>
+        <p>Copyright © turingAround</p>
     </footer>
 </body>
 </html>
